--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,11 @@ a:hover,li:hover{
 }
 .list li{
   display: inline-block;
-  width: 49%
+  width: 49%;
+  font-size: 16px;
+}
+.list span{
+  font-size: 16px;
 }
 .main-content h2 {
   color: #239ACB;
